--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ body {
 }
 
 main {
+    font-family: 'Montserrat', sans-serif;
     display: flex;
     flex-direction: column;
     position: absolute;
@@ -17,12 +18,16 @@ main {
     justify-content: center;
 }
 
+h1 {
+    width: 95%;
+}
+
 /* Product Type */
 h3 {
     font-size: .85rem;
     color: #9A9AA2;
     text-transform: uppercase;
-    letter-spacing: 3px;
+    letter-spacing: .1875em;
 }
 
 img {
@@ -53,7 +58,7 @@ button * {
     background-color: #FFFFFF;
     height: 90%;
     margin: 0 1rem;
-    border-radius: 10px;
+    border-radius: .625em;
 }
 
 .product-desc {
@@ -61,11 +66,16 @@ button * {
     margin: 10px 1rem;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
+}
+
+.product-desc h3 {
+    margin-top: 1rem;
 }
 
 #desc {
     color: #7f7f8a;
+    width: 95%;
 }
 
 .product-price {
@@ -76,7 +86,8 @@ button * {
 
 #sale-price {
     color: #3B7660;
-    font-size: 2.25rem;
+    font-size: 2rem;
+    font-family: 'Fraunces', serif;
 }
 
 #old-price {
@@ -85,7 +96,9 @@ button * {
 }
 
 .button-text {
-    gap: 15px;
+    gap: 1em;
+    font-size: 1rem;
+    font-weight: bold;
 }
 
 .attribution { 
@@ -93,6 +106,7 @@ button * {
     text-align: center;
     position: absolute;
     bottom: 0;
+    margin-bottom: 5px;
 }
 
 .attribution a { 
